<resources>
    //LOGIN PAGE STRINGS
    <string name="app_name">FindMyMaster</string>
    <string name="LoginPage_welcomeMessage">Welcome To\n Find My\n Master\'s</string>
    <string name="LoginPage_password">Password</string>
    <string name="loginPage_user">User Name</string>
    <string name="LoginPage_rememberMe">Remember me ?</string>
    <string name="LoginPage_noAccount">Don\'t Have an Account?</string>
    <string name="LoginPage_loginButtonString">LOGIN</string>
    <string name="LoginPage_forgetPassword">Don\'t Remember Password?</string>
    <string name="LoginPage_signUpString">Sign Up</string>
    <string name="LoginPage_appIcon">AppIcon</string>

    //REGISTRATION PAGE STRINGS
    <string name="RegistrationPage_Quote">You are in\n Masterful Hands\n Your Future\n Await!</string>
    <string name="RegistrationPage_usernameField">Enter Your User Name</string>
    <string name="RegistrationPage_emailField">Enter Your Email</string>
    <string name="RegistrationPage_passwordField">Enter Your Password</string>
    <string name="RegistrationPage_confirmPasswordField">Confirm Your Password</string>
    <string name="RegistrationPage_registerButtonString">REGISTER</string>
    <string name="RegistrationPage_haveAccount">Already Have an Account?</string>
    <string name="RegistrationPage_signInString">Sign in</string>

    //MAIN PAGE STRINGS
    <string name="MainPage_titleText">Choose</string>
    <string name="MainPage_QuoteMessageField">The Path to Becoming Master:\n Accelerate Your Journey to Master\'s Degree and Career Advancement</string>
    <string name="MainPage_exploreText">Explore</string>
    <string name="MainPage_findText">Find</string>
    <string name="MainPage_decideText">Decide</string>
    <string name="MainPage_applyText">Apply</string>

    //FIND PAGE STRINGS
    <string name="FindPage_titleText">Find</string>

    //PROGRAM DETAILS PAGE STRINGS
    <string name="ProgramDetailsPage_programNameText">Accounting</string>
    <string name="ProgramDetailsPage_universityNameText">Istanbul Technical University</string>
    <string name="programDetailsPage_durationField">\t24 months</string>
    <string name="programDetailsPage_tuitionField">\t41250 USD</string>
    <string name="programDetailsPage_deadlineField">\t22 Aug 2019</string>
    <string name="programDetailsPage_languageField">\tEnglish</string>
    <string name="programDetailsPage_cityNameText">Istanbul</string>
    <string name="programDetailsPage_countryNameText">Turkey</string>
    <string name="ProgramDetailsPage_cityDetailsButton">See City Details</string>
    <string name="ProgramDetailsPage_academicRequirementsText">Academic Requirements</string>
    <string name="ProgramDetailsPage_listOfAcademicRequirementsText">*Depending on the programme and institution, you may need a 2.1 in your Bachelors\t\t\t\t\t\t\t\t\t
        *Language proficiency\t\t\t\t\t\t\t\t\t\t\t\t\t *Professional experience Some postgraduate programmes may require you to have some professional experience</string>
    <string name="programDetailsPage_applyButton"> Quick Apply</string>


</resources>
