<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:clickable="true"
    tools:context=".AppUI.UIPages.LoginPageActivity"
    android:focusable="true">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <ImageView
        android:id="@+id/LoginPage_MastersIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/masters_icon"
        android:contentDescription="@string/LoginPage_appIcon" />

    <TextView
        android:id="@+id/LoginPage_WelcomeMessageField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/LoginPage_welcomeMessage"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:fontFamily="@font/roboto"
        android:textStyle="bold"

        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/LoginPage_MastersIcon" />

    <EditText
        android:id="@+id/LoginPage_usernameField"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:drawableEnd="@drawable/ic_user"
        android:background="@drawable/main_background_rounded_color"
        android:fontFamily="@font/roboto"
        android:hint="@string/loginPage_user"
        android:inputType="text"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="#818181"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/LoginPage_WelcomeMessageField"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/LoginPage_loginPasswordField"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/main_background_rounded_color"
        android:drawableEnd="@drawable/ic_lock"
        android:fontFamily="@font/roboto"
        android:hint="@string/LoginPage_password"
        android:inputType="textPassword"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="#FC818181"
        android:textSize="16sp"
        android:textStyle="bold"
        android:importantForAutofill="no"

        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/LoginPage_usernameField"
         />

    <Button
        android:id="@+id/LoginPage_loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="sans-serif-black"
        android:text="@string/LoginPage_loginButtonString"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/LoginPage_RememberMeText" />


    <TextView
        android:id="@+id/LoginPage_RememberMeText"
        android:layout_width="120dp"
        android:layout_height="29dp"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/LoginPage_rememberMe"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginPage_loginPasswordField" />

    <CheckBox
        android:id="@+id/LoginPage_rememberMeCheckbox"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toTopOf="@+id/LoginPage_loginButton"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/LoginPage_loginPasswordField" />

    <TextView
        android:id="@+id/LoginPage_forgotPasswordLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:minHeight="48dp"
        android:text="@string/LoginPage_forgetPassword"
        android:textColor="@color/login_form_details"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/footer_line"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/LoginPage_loginButton"
        app:layout_constraintVertical_bias="0.0"
        android:focusable="true" />

    <View
        android:id="@+id/footer_line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="90dp"
        android:background="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/LoginPage_loginButton"
        app:layout_constraintVertical_bias="0.991"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/no_acc_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/LoginPage_noAccount"
        android:textColor="@color/login_form_details"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.344"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/footer_line"
        app:layout_constraintVertical_bias="0.037" />

    <TextView
        android:id="@+id/LoginPage_signUpLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/LoginPage_signUpString"
        android:textColor="#448AFF"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/no_acc_text"
        app:layout_constraintTop_toBottomOf="@+id/footer_line"
        app:layout_constraintVertical_bias="0.037" />


</androidx.constraintlayout.widget.ConstraintLayout>